Removed redundant base64 and renamed things to save headaches

--- a/OnShape/library.properties
+++ b/OnShape/library.properties
@@ -8,4 +8,4 @@ category=Communication
 url=http://example.com/
 architectures=*
 includes=OnShape.h
-depends=TimeLib,base64
+depends=TimeLib,base64,SHA256
