--- a/OnShape/library.properties
+++ b/OnShape/library.properties
@@ -1,11 +1,11 @@
-name=OnShape
-version=1.0
+name=Onshape
+version=1.1
 author=Ronit Sinha <use@git.hub>
-maintainer=ronitsinha <use@git.hub>
+maintainer=ronitsinha, aashirjalal
 sentence=OnShape API client for Arduino Nano
 paragraph=Make REST API requests using API keys
 category=Communication
 url=http://example.com/
 architectures=*
-includes=OnShape.h
-depends=TimeLib,base64,SHA256
+includes=Onshape.h
+depends=Base64_Codec,SPI,WiFiNINA
